# claw-gauntlet

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
docs/: capabilities.md  foundation.md  gastown.md  github.md  publishing.md  sponsorship.md  startup-operating-stack.md
docs/agents/: implementer.md  mayor.md  publisher.md  reviewer.md  verifier.md
docs/superpowers/plans/: 2026-07-16-claw-foundation-v1.md  2026-07-16-sponsor-agent.md
docs/superpowers/specs/: 2026-07-16-claw-family-v1-v2-design.md  2026-07-16-sponsor-agent-design.md
examples/: sponsor-campaign.json
src/claw_gauntlet/: __init__.py  __main__.py  adapters.py  cli.py  evidence.py  family.py  github_claws.py  handoff.py  improvement.py  manifest.py  project_claw.py  publication.py  research_agent.py  rrs.py  run_ledger.py  run_record.py  sponsor_scheduler.py  sponsorship.py
tests/: test_adapters.py  test_evidence.py  test_family_cli.py  test_foundation_cli.py  test_github_claws.py  test_handoff.py  test_improvement.py  test_manifest.py  test_project_claw.py  test_publication.py  test_research_agent.py  test_rrs.py  test_run_ledger.py  test_run_record.py  test_sponsor_scheduler.py  test_sponsorship.py
