[project]
name = "claw-gauntlet"
version = "0.1.0"
description = "Evidence-backed capability intelligence for agentic projects"
requires-python = ">=3.12,<3.13"

[project.scripts]
clawgauntlet = "claw_gauntlet.cli:entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claw_gauntlet"]

[dependency-groups]
dev = ["pytest>=8.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
